--- a/experience.html
+++ b/experience.html
@@ -81,16 +81,16 @@
                 </figure>
         <hr>
         <span class="cvheading">FCC CONSTRUCCIÓN</span><br>
-        <p>In charge of production of Working Drawings and also Design Site Representative for the <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a>, 
+        <p style="text-align: justify;">In charge of production of Working Drawings and also Design Site Representative for the <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a>, 
         (Vidin-Calafat Bridge, Bulgaria). Contract value 235M€.</p>
             <figure>
                 <img src="photos/vidin.jpg" alt="Mersey Gateway" style="width:90%">
                 <figcaption>New Europe Bridge (Bulgaria)</figcaption>
             </figure>
-        <p>Responsible for developing the Definitive Design drawings into Working Drawings for construction, 
+        <p style="text-align: justify;">Responsible for developing the Definitive Design drawings into Working Drawings for construction, 
             for all the bridge structural elements: Piling, Pile Caps and Vessel Impact Protection, 
             Piers, Deck, Abutments, etc. Drainage, M&E, Bank Stabilization and Scour Protection.<br>
-            Also part time Resident Engineer and Design Site Representative at the monthly site progress meetings.
+            Part time Resident Engineer and Design Site Representative at the monthly site progress meetings.
         </p>
     <hr>        
         <span class="cvheading">DRAGADOS SA</span><br>
@@ -100,7 +100,7 @@
                 <img src="photos/repsol.jpg" alt="Mersey Gateway" style="width:40%">
                 <figcaption>Torre Cepsa (Madrid)</figcaption>
             </figure>
-            <p>Responsible for on-site quality control checking of reception of materials and execution of reinforced 
+            <p  style="text-align: justify;">Responsible for on-site quality control checking of reception of materials and execution of reinforced 
                 and prestressed concrete structures and concrete-steel composite slabs.</p>
     <hr>
                 <span class="cvheading">OPROLER MADRID SA</span><br>
@@ -121,11 +121,11 @@
                 <img src="photos/gib.jpg" alt="Mersey Gateway" style="width:40%">
                 <figcaption>Gibraltar General Hospital</figcaption>
             </figure>
-            <p>Project involved modifying an existing concrete load bearing wall office complex; drilling and cutting 
+            <p style="text-align: justify;">Project involved modifying an existing concrete load bearing wall office complex; drilling and cutting 
                 new doors and access for services, also installing new steel framed roof structures and elevated steel 
                 walkways between existing buildings. </p>       
                 <p><b>Design Engineer.</b></p>
-                <p>Produced design calculations for a vast array of projects in steel, in-situ and precast concrete, timber and load bearing masonry. New build and renovations. Residential, commercial, hospitals, laboratories, and offices.
+                <p style="text-align: justify;">Produced design calculations for a vast array of projects in steel, in-situ and precast concrete, timber and load bearing masonry. New build and renovations. Residential, commercial, hospitals, laboratories, and offices.
                     Preparation of structural surveys and appraisals of existing buildings, reports etc.
                     Projects included:
                 </p>
@@ -169,7 +169,7 @@
         </figure>
     <hr>
         <span class="cvheading">JOHN E. FOSTER AND PARTNERS, LONDON</span><br>
-        <p><b>Design Engineer</b><br> 
+        <p style="text-align: justify;"><b>Design Engineer</b><br> 
         Experience similar to Ross and Partners: Produced design calculations for a vast array of projects in steel, in-situ and precast concrete, timber and load bearing masonry. New build and renovations. Residential, commercial and office.
         Preparation of structural surveys and appraisals of existing buildings, reports etc.
         Projects included:
