--- a/index.html
+++ b/index.html
@@ -67,41 +67,43 @@
 </nav>
 <main style="padding-top:1vh; background-color:#f6f6f6; text-align: justify;">
     <div class="container p-3">
-        <div class="row" style="padding-left:5px; margin-bottom: 0%;">
+        <div class="row" style="padding-left:5px; margin-bottom: 0%; float: left;">
             <span class="cvheading">Introduction</span>
             <p style="margin-bottom: 0%;">Australian freelance civil/structural engineer with extensive experience.
-                 Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
+                    Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
                 > Management of tender and detailed design document preparation; drawings, specifications etc.;<br>
                 > Representation of consultant at design/site/project management meetings;<br>
                 > Assessment and evaluation of claims.
                 </p>
             </div>
-            <!-- <span class="cvbigheading">Résumé</span> -->
-    </div>
-    <hr>
-    <div class="container p-3">
+        <hr>
         <div class="column">
+            <row>
             <span class="cvheading" style="margin-top:0%">Profile</span><br>
             <div style="float:left; margin: 5px 5px 5px ">
                 <img
-                    title = "Richard Hart"      
+                    title = "Richard Hart"     
                     src="photos/rh_foto_trim.jpg"
                     width="110px"
                     alt="RH"
                     class="img-thumbnail"
-                    margin= "5px";
+                    margin= "5px"
                     />
             </div>
-            <p style="margin-left: 5px;">Richard has nearly 40 years of construction industry experience in the 
-                fields of civil and structural engineering. His experience covers both building 
-                structures and more recently, bridge projects.
-                He has worked in Australia, England and Spain where he now resides.</p>
+            <p style="margin-left: 5px;">Nearly 40 years of construction industry experience in 
+                the fields of civil and structural engineering, covering both building structures 
+                and, more recently, bridge projects. Work experience in Australia, England and Spain.
+            </p>
+            </row>
             <span class="cvheading">Profession</span> 
             <p>Structural/Civil Engineer</p>
             <span class="cvheading">Qualifications</span>
             <p>BE (Civil) University of Melbourne, 1982.</p>
         </div>
+            <!-- </div>
+            </div> -->
         <div class="column">
+            <!-- <div class="container p-3"> -->
             <span class="cvheading">Experience</span>
             <p>
                 > Broad range of experience in design, site supervision, independent checking and project management.<br>
@@ -109,8 +111,9 @@
                 > Civil Engineering design of paved areas  and drainage in housing developments.<br>
                 > Quantities estimating, structural surveys and appraisals of existing buildings, reports,  method statements, specifications etc.<br>
                 > Technical evaluation of civil engineering claims.
-            </p>    
-        </div>
+            </p>   
+            <!-- </div> -->
+            </div>
         <div class="column">
             <span class="cvheading">Nationality</span>
             <p>Australian.</p>
@@ -127,38 +130,38 @@
                 Corporate Member Institution of Structural Engineers (MIStructE).<br>
                 Graduate Member Institution of Civil Engineers (GMICE).
             </p>
-        </div>
-    </div>
-    <div class="container p-3" >
-        <div class="row" style="padding-left:5px">
-            <span class="cvheading">Experience 2006 to present</span>
-            <span class="link">Evaluation of contract claims</span>
-            <p>Richard is responsible for assessing and defending various claims brought by contractors against Eptisa, 
-                to assist in the mediation process. A claim relating to the Mersey Gateway Project was successfully 
-                resolved at mediation and a claim relating to the N25 New Ross Bypass tender is ongoing.</p>
-            <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project</a><br>
-            <p><b>Deputy Project Manager Landside Structures.</b> 
-                Project manager for Eptisa  whose design responsibilities covered all retaining walls, 
-                drainage for the entire project including the Main Bridge, geotechnical design and 
-                sub-structure design Astmoor & Bridgewater Viaduct. Richard was responsible for the 
-                supervision of production and submission of drawings and reports, including quality control. 
-                He attended weekly design coordination meetings as well as monthly DJV Board meetings.</p>
-        </div>
-        <div class="row" style="padding-left:5px">
-            <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
-            <p><b>Project Manager CAT III check including Barrow Crossing.</b> Richard was responsible for overseeing 
-                the independent checking (category 3) and acceptance of structural drawings and geotechnical reports 
-                as well as attending client coordination meetings.</p>
-        </div>
-        <div class="row" style="padding-left:5px">
-            <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
-            <p><b>Management of production of Working Drawings and also Design Site Representative</b> for the New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). 
-                Richard was responsible for developing 
-                the design general arrangement drawings for the entire project into working drawings. 
-                These included the river crossing and approach as well as the railway bridge and the drainage design for both structures. 
-                He was also the Design Site Representative and attended monthly site design coordination meetings 
-                between designers, client and checking engineers.</p>
-        </div>
+            </div>
+            <div class="row" style="padding-left:5px">
+                <span class="cvheading">Experience 2006 to present</span>
+                <span class="link">Evaluation of contract claims</span>
+                <p>Richard is responsible for assessing and defending various claims brought by contractors against Eptisa, 
+                    to assist in the mediation process. A claim relating to the Mersey Gateway Project was successfully 
+                    resolved at mediation and a claim relating to the N25 New Ross Bypass tender is ongoing.
+                </p>
+                <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project</a><br>
+                <p><b>Deputy Project Manager Landside Structures.</b> 
+                    Project manager for Eptisa  whose design responsibilities covered all retaining walls, 
+                    drainage for the entire project including the Main Bridge, geotechnical design and 
+                    sub-structure design Astmoor & Bridgewater Viaduct. Richard was responsible for the 
+                    supervision of production and submission of drawings and reports, including quality control. 
+                    He attended weekly design coordination meetings as well as monthly DJV Board meetings.
+                </p>
+                <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
+                <p><b>Project Manager CAT III check including Barrow Crossing.</b> Richard was responsible for overseeing 
+                    the independent checking (category 3) and acceptance of structural drawings and geotechnical reports 
+                    as well as attending client coordination meetings.
+                </p>
+            </div>
+            <div class="row" style="padding-left:5px">
+                <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
+                <p><b>Management of production of Working Drawings and also Design Site Representative</b> for the New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). 
+                    Richard was responsible for developing 
+                    the design general arrangement drawings for the entire project into working drawings. 
+                    These included the river crossing and approach as well as the railway bridge and the drainage design for both structures. 
+                    He was also the Design Site Representative and attended monthly site design coordination meetings 
+                    between designers, client and checking engineers.
+                </p>
+            </div>
     </div>
 </main>
 </body>
