--- a/index.html
+++ b/index.html
@@ -67,16 +67,17 @@
 </nav>
 <main style="padding-top:1vh; background-color:#f6f6f6; text-align: justify;">
     <div class="container p-3">
-        <div class="row" style="padding-left:5px; margin-bottom: 0%; float: left;">
+        <div class="row" style="padding-left:5px; margin-bottom: 5px; float: left;">
             <span class="cvheading">Introduction</span>
-            <p style="margin-bottom: 0%;">Australian freelance civil/structural engineer with extensive experience.
-                    Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
+            <p style="margin-bottom: 5px;">Australian freelance civil/structural engineer 
+                with extensive experience. Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
                 > Management of tender and detailed design document preparation; drawings, specifications etc.;<br>
                 > Representation of consultant at design/site/project management meetings;<br>
-                > Assessment and evaluation of claims.
+                > Assessment and evaluation of claims to establish responsibility, 
+                cause, effect and damage, to assist in mediation.
                 </p>
+                <hr>
             </div>
-        <hr>
         <div class="column">
             <row>
             <span class="cvheading" style="margin-top:0%">Profile</span><br>
@@ -95,10 +96,12 @@
                 and, more recently, bridge projects. Work experience in Australia, England and Spain.
             </p>
             </row>
-            <span class="cvheading">Profession</span> 
-            <p>Structural/Civil Engineer</p>
-            <span class="cvheading">Qualifications</span>
-            <p>BE (Civil) University of Melbourne, 1982.</p>
+            <div class="container-fluid p-0" style="float:left">
+                <span class="cvheading">Profession</span> 
+                <p>Structural/Civil Engineer</p>
+                <span class="cvheading">Qualifications</span>
+                <p>BE (Civil) University of Melbourne, 1982.</p>
+            </div>
         </div>
             <!-- </div>
             </div> -->
