--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 </nav>
 <main style="padding-top:1vh; background-color:#f6f6f6; text-align: justify;">
     <div class="container p-3">
-        <div class="row" style="padding-left:5px; margin-bottom: 5px; float: left;">
+        <div class="row" style=" margin-bottom: 1rem; float: left;">
             <span class="cvheading">Introduction</span>
-            <p style="margin-bottom: 5px;">Australian freelance civil/structural engineer 
+            <p style="margin-bottom: 1rem;">Australian freelance civil/structural engineer 
                 with extensive experience. Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
                 > Management of tender and detailed design document preparation; drawings, specifications etc.;<br>
                 > Representation of consultant at design/site/project management meetings;<br>
@@ -77,9 +77,9 @@
                 cause, effect and damage, to assist in mediation.
                 </p>
                 <hr>
-            </div>
-        <div class="column">
-            <row>
+        </div>
+            <div class="column">
+                <row>
             <span class="cvheading" style="margin-top:0%">Profile</span><br>
             <div style="float:left; margin: 5px 5px 5px ">
                 <img
@@ -116,7 +116,7 @@
                 > Technical evaluation of civil engineering claims.
             </p>   
             <!-- </div> -->
-            </div>
+        </div>
         <div class="column">
             <span class="cvheading">Nationality</span>
             <p>Australian.</p>
@@ -133,8 +133,9 @@
                 Corporate Member Institution of Structural Engineers (MIStructE).<br>
                 Graduate Member Institution of Civil Engineers (GMICE).
             </p>
-            </div>
-            <div class="row" style="padding-left:5px">
+        </div>
+        <div class="row" style="padding-left:5px">
+            <hr>
                 <span class="cvheading">Experience 2006 to present</span>
                 <span class="link">Evaluation of contract claims</span>
                 <p>Richard is responsible for assessing and defending various claims brought by contractors against Eptisa, 
