--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
             </div>
             <div class="row" style="padding-left:5px">
                 <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
-                <p><b>Management of production of Working Drawings and also Design Site Representative</b> for the New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). 
+                <p><b>Management of production of Working Drawings and also Design Site Representative</b> 
+                    for the New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). 
                     Richard was responsible for developing 
                     the design general arrangement drawings for the entire project into working drawings. 
                     These included the river crossing and approach as well as the railway bridge and the drainage design for both structures. 
