--- a/index.html
+++ b/index.html
@@ -66,21 +66,20 @@
         </a>
 </nav>
 <main style="padding-top:1vh; background-color:#f6f6f6; text-align: justify;">
-    <div class="container p-3">
-        <div class="row" style=" margin-bottom: 1rem; float: left;">
-            <span class="cvheading">Introduction</span>
-            <p style="margin-bottom: 1rem;">Australian freelance civil/structural engineer 
-                with extensive experience. Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
-                > Management of tender and detailed design document preparation; drawings, specifications etc.;<br>
-                > Representation of consultant at design/site/project management meetings;<br>
-                > Assessment and evaluation of claims to establish responsibility, 
-                cause, effect and damage, to assist in mediation.
-                </p>
-                <hr>
-        </div>
-            <div class="column">
-                <row>
-            <span class="cvheading" style="margin-top:0%">Profile</span><br>
+<div class="container">
+    <div class="row">
+        <p style="margin-bottom: 1rem;">Australian freelance civil/structural engineer 
+            with extensive experience. Based in Spain with availability for either short or long-term assignments.  With particular interest in:<br>
+            > Management of tender and detailed design document preparation; drawings, specifications etc.;<br>
+            > Representation of consultant at design/site/project management meetings;<br>
+            > Assessment and evaluation of claims to establish responsibility, 
+            cause, effect and damage, to assist in mediation.
+            </p>
+            <hr>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <span class="cvheading" style="margin-top:0%">Profile</span><br>
             <div style="float:left; margin: 5px 5px 5px ">
                 <img
                     title = "Richard Hart"     
@@ -95,19 +94,15 @@
                 the fields of civil and structural engineering, covering both building structures 
                 and, more recently, bridge projects. Work experience in Australia, England and Spain.
             </p>
-            </row>
             <div class="container-fluid p-0" style="float:left">
                 <span class="cvheading">Profession</span> 
                 <p>Structural/Civil Engineer</p>
                 <span class="cvheading">Qualifications</span>
                 <p>BE (Civil) University of Melbourne, 1982.</p>
             </div>
-        </div>
-            <!-- </div>
-            </div> -->
-        <div class="column">
-            <!-- <div class="container p-3"> -->
-            <span class="cvheading">Experience</span>
+      </div>
+      <div class="col-sm">
+        <span class="cvheading">Experience</span>
             <p>
                 > Broad range of experience in design, site supervision, independent checking and project management.<br>
                 > Structural design of building projects in reinforced concrete, structural steelwork, timber, and masonry.<br>
@@ -115,34 +110,36 @@
                 > Quantities estimating, structural surveys and appraisals of existing buildings, reports,  method statements, specifications etc.<br>
                 > Technical evaluation of civil engineering claims.
             </p>   
-            <!-- </div> -->
-        </div>
-        <div class="column">
-            <span class="cvheading">Nationality</span>
-            <p>Australian.</p>
-            <span class="cvheading">Languages</span>
-            <p>Fluent in Spanish.</p>
-            <span class="cvheading">Online Computer Science Courses Harvard University</span>
-            <p>
-                CS50 Web: <i>Web Programming with Python and JavaScript;</i><br>
-                CS50 AI: <i>Introduction to Artificial Intelligence with Python;</i><br>
-                CS50x: <i>Introduction to Computer Science.</i><br>
-            </p>
-            <span class="cvheading">Professional Associations</span>
-            <p>
-                Corporate Member Institution of Structural Engineers (MIStructE).<br>
-                Graduate Member Institution of Civil Engineers (GMICE).
-            </p>
-        </div>
-        <div class="row" style="padding-left:5px">
-            <hr>
-                <span class="cvheading">Experience 2006 to present</span>
+      </div>
+      <div class="col-sm">
+        <span class="cvheading">Nationality</span>
+        <p>Australian.</p>
+        <span class="cvheading">Languages</span>
+        <p>Fluent in Spanish.</p>
+        <span class="cvheading">Online Computer Science Courses Harvard University</span>
+        <p>
+            CS50 Web: <i>Web Programming with Python and JavaScript;</i><br>
+            CS50 AI: <i>Introduction to Artificial Intelligence with Python;</i><br>
+            CS50x: <i>Introduction to Computer Science.</i><br>
+        </p>
+        <span class="cvheading">Professional Associations</span>
+        <p>
+            Corporate Member Institution of Structural Engineers (MIStructE).<br>
+            Graduate Member Institution of Civil Engineers (GMICE).
+        </p>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+        <span class="cvheading">Experience 2006 to present</span>
                 <span class="link">Evaluation of contract claims</span>
                 <p>Richard is responsible for assessing and defending various claims brought by contractors against Eptisa, 
                     to assist in the mediation process. A claim relating to the Mersey Gateway Project was successfully 
                     resolved at mediation and a claim relating to the N25 New Ross Bypass tender is ongoing.
                 </p>
-                <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project</a><br>
+    </div>
+    <div class="row">
+        <a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project</a><br>
                 <p><b>Deputy Project Manager Landside Structures.</b> 
                     Project manager for Eptisa  whose design responsibilities covered all retaining walls, 
                     drainage for the entire project including the Main Bridge, geotechnical design and 
@@ -150,14 +147,16 @@
                     supervision of production and submission of drawings and reports, including quality control. 
                     He attended weekly design coordination meetings as well as monthly DJV Board meetings.
                 </p>
-                <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
+    </div>
+    <div class="row">
+        <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass</a><br>
                 <p><b>Project Manager CAT III check including Barrow Crossing.</b> Richard was responsible for overseeing 
                     the independent checking (category 3) and acceptance of structural drawings and geotechnical reports 
                     as well as attending client coordination meetings.
                 </p>
-            </div>
-            <div class="row" style="padding-left:5px">
-                <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
+    </div>
+    <div class="row">
+        <a class="link" href="https://www.ciudadfcc.com/en/-/vidin-calafat-bridge">New Europe Bridge</a><br>
                 <p><b>Management of production of Working Drawings and also Design Site Representative</b> 
                     for the New Europe Bridge (Vidin-Calafat Bridge, Bulgaria). 
                     Richard was responsible for developing 
@@ -166,8 +165,8 @@
                     He was also the Design Site Representative and attended monthly site design coordination meetings 
                     between designers, client and checking engineers.
                 </p>
-            </div>
     </div>
+  </div>
 </main>
 </body>
 </html>
